[gd_scene load_steps=23 format=3 uid="uid://c8g21i1bsrasq"]

[ext_resource type="Script" path="res://scripts/interface/menu/pause_menu.gd" id="1_cfw8x"]
[ext_resource type="Texture2D" uid="uid://c7fh3hrrdfvg3" path="res://assets/interface/buttons/menu/option-menu-background.png" id="1_ns53v"]
[ext_resource type="Texture2D" uid="uid://d2cpda5u8xqdc" path="res://assets/interface/buttons/menu/options-title.png" id="2_svhlh"]
[ext_resource type="FontFile" uid="uid://ck3faun43yoik" path="res://assets/fonts/Halloween pixel.otf" id="3_kxu2v"]
[ext_resource type="Texture2D" uid="uid://bg4spebc0nwls" path="res://assets/interface/buttons/menu/grabber.png" id="4_xujcx"]
[ext_resource type="Texture2D" uid="uid://dw17p6gjuyh2x" path="res://assets/interface/buttons/menu/grabber-highlight.png" id="5_ofo2l"]
[ext_resource type="Script" path="res://scripts/interface/menu/AudioSlider.gd" id="6_f7psf"]
[ext_resource type="Texture2D" uid="uid://cy61xvcky08sn" path="res://assets/interface/buttons/save-normal.png" id="7_40bwa"]
[ext_resource type="Texture2D" uid="uid://5wxc782w3t1h" path="res://assets/interface/buttons/save-pressed.png" id="8_h26nt"]
[ext_resource type="Texture2D" uid="uid://g5gkn6cvpes4" path="res://assets/interface/buttons/save-hover.png" id="9_eovjd"]
[ext_resource type="Texture2D" uid="uid://bedpjfjsc4e3b" path="res://assets/interface/buttons/back-normal.png" id="10_qqhpk"]
[ext_resource type="Texture2D" uid="uid://dpa6veryhyi2c" path="res://assets/interface/buttons/back-pressed.png" id="11_cjusj"]
[ext_resource type="Texture2D" uid="uid://dq8vgmdlxkvh6" path="res://assets/interface/buttons/back-hover.png" id="12_mgs1h"]
[ext_resource type="Script" path="res://scripts/audio/audio_sfx.gd" id="13_xemp1"]

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_lb0r8"]
load_path = "res://.godot/imported/grabber.png-fdd631144d9178bb6336e536fd437ef2.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ibud0"]
load_path = "res://.godot/imported/grabber-highlight.png-8817909c89a5e1d55cb4cc5a0b8078b3.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_ojk2r"]
load_path = "res://.godot/imported/grabber.png-fdd631144d9178bb6336e536fd437ef2.ctex"

[sub_resource type="CompressedTexture2D" id="CompressedTexture2D_l8qhq"]
load_path = "res://.godot/imported/grabber-highlight.png-8817909c89a5e1d55cb4cc5a0b8078b3.ctex"

[sub_resource type="Animation" id="Animation_kwwg7"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(113, 20)]
}

[sub_resource type="Animation" id="Animation_p8bmd"]
resource_name = "intro"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.4, 0.5, 0.6, 0.7, 0.8),
"transitions": PackedFloat32Array(1, 1, 1, 1, 1, 1),
"update": 0,
"values": [Vector2(113, -230), Vector2(113, 20), Vector2(113, 8), Vector2(113, 20), Vector2(113, 15), Vector2(113, 20)]
}

[sub_resource type="Animation" id="Animation_r8o33"]
resource_name = "out"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("TextureRect:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(113, 20), Vector2(113, -230)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_b6y4k"]
_data = {
"RESET": SubResource("Animation_kwwg7"),
"intro": SubResource("Animation_p8bmd"),
"out": SubResource("Animation_r8o33")
}

[node name="PauseMenu" type="CanvasLayer" node_paths=PackedStringArray("audio_sfx") groups=["pause_menu"]]
script = ExtResource("1_cfw8x")
audio_sfx = NodePath("AudioSfx")

[node name="Background" type="ColorRect" parent="."]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
color = Color(0.129412, 0.129412, 0.129412, 0.843137)

[node name="TextureRect" type="TextureRect" parent="."]
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -100.0
offset_top = -100.0
offset_right = 100.0
offset_bottom = 100.0
grow_horizontal = 2
grow_vertical = 2
pivot_offset = Vector2(75, 100)
texture = ExtResource("1_ns53v")

[node name="VBoxContainer" type="VBoxContainer" parent="TextureRect"]
layout_mode = 1
anchors_preset = 8
anchor_left = 0.5
anchor_top = 0.5
anchor_right = 0.5
anchor_bottom = 0.5
offset_left = -60.0
offset_top = -12.0
offset_right = 60.0
offset_bottom = 12.0
grow_horizontal = 2
grow_vertical = 2

[node name="TextureRect" type="TextureRect" parent="TextureRect/VBoxContainer"]
layout_mode = 2
size_flags_horizontal = 4
texture = ExtResource("2_svhlh")
stretch_mode = 2

[node name="MarginContainer" type="MarginContainer" parent="TextureRect/VBoxContainer"]
custom_minimum_size = Vector2(0, 6.25)
layout_mode = 2

[node name="HBoxContainer" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="MasterLabel" type="Label" parent="TextureRect/VBoxContainer/HBoxContainer"]
layout_mode = 2
theme_override_colors/font_color = Color(0.258824, 0.141176, 0.2, 1)
theme_override_fonts/font = ExtResource("3_kxu2v")
text = "Master"

[node name="MasterSlide" type="HSlider" parent="TextureRect/VBoxContainer/HBoxContainer" groups=["slider"]]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
theme_override_icons/grabber = ExtResource("4_xujcx")
theme_override_icons/grabber_highlight = ExtResource("5_ofo2l")
max_value = 1.0
step = 0.1
value = 1.0
script = ExtResource("6_f7psf")
bus_name = "Master"

[node name="HBoxContainer2" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="MusicLabel" type="Label" parent="TextureRect/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(59, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.258824, 0.141176, 0.2, 1)
theme_override_fonts/font = ExtResource("3_kxu2v")
text = "Music
"

[node name="MusicSlider" type="HSlider" parent="TextureRect/VBoxContainer/HBoxContainer2"]
custom_minimum_size = Vector2(53, 0)
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("CompressedTexture2D_lb0r8")
theme_override_icons/grabber_highlight = SubResource("CompressedTexture2D_ibud0")
max_value = 1.0
step = 0.1
value = 1.0
script = ExtResource("6_f7psf")
bus_name = "Music"

[node name="HBoxContainer3" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="SfxLabel" type="Label" parent="TextureRect/VBoxContainer/HBoxContainer3"]
custom_minimum_size = Vector2(59, 0)
layout_mode = 2
theme_override_colors/font_color = Color(0.258824, 0.141176, 0.2, 1)
theme_override_fonts/font = ExtResource("3_kxu2v")
text = "Sfx"

[node name="SfxSlider" type="HSlider" parent="TextureRect/VBoxContainer/HBoxContainer3"]
layout_direction = 1
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 4
theme_override_icons/grabber = SubResource("CompressedTexture2D_ojk2r")
theme_override_icons/grabber_highlight = SubResource("CompressedTexture2D_l8qhq")
max_value = 1.0
step = 0.1
value = 1.0
script = ExtResource("6_f7psf")
bus_name = "Sfx"

[node name="HBoxContainer4" type="HBoxContainer" parent="TextureRect/VBoxContainer"]
layout_mode = 2

[node name="SaveButton" type="TextureButton" parent="TextureRect/VBoxContainer/HBoxContainer4" groups=["button"]]
layout_mode = 2
texture_normal = ExtResource("7_40bwa")
texture_pressed = ExtResource("8_h26nt")
texture_hover = ExtResource("9_eovjd")

[node name="BackButton" type="TextureButton" parent="TextureRect/VBoxContainer/HBoxContainer4" groups=["button"]]
layout_mode = 2
texture_normal = ExtResource("10_qqhpk")
texture_pressed = ExtResource("11_cjusj")
texture_hover = ExtResource("12_mgs1h")

[node name="Animation" type="AnimationPlayer" parent="."]
autoplay = "intro"
libraries = {
"": SubResource("AnimationLibrary_b6y4k")
}

[node name="AudioSfx" type="AudioStreamPlayer" parent="."]
bus = &"Sfx"
script = ExtResource("13_xemp1")

[connection signal="escape_pressed" from="." to="." method="_on_escape_pressed"]
[connection signal="value_changed" from="TextureRect/VBoxContainer/HBoxContainer/MasterSlide" to="TextureRect/VBoxContainer/HBoxContainer/MasterSlide" method="_on_value_changed"]
[connection signal="value_changed" from="TextureRect/VBoxContainer/HBoxContainer2/MusicSlider" to="TextureRect/VBoxContainer/HBoxContainer2/MusicSlider" method="_on_value_changed"]
[connection signal="value_changed" from="TextureRect/VBoxContainer/HBoxContainer3/SfxSlider" to="TextureRect/VBoxContainer/HBoxContainer3/SfxSlider" method="_on_value_changed"]
[connection signal="animation_finished" from="Animation" to="." method="_on_animation_finished"]
